# Aeroacoustics2026

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.h  meshStructure.h
src/: geometry.cpp  meshStructure.cpp
tools/: cppintro.cpp
